# gip

./: .env.example  .env.production.example  .gitignore  DEPLOYMENT.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
.trae/documents/: ai-infrastructure-planning-development-plan.md  mvp-demo-implementation-plan.md  next-phase-implementation-plan.md  phase5-6-7-implementation-plan.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt  seed_admin.py  update_user_emails.py
backend/alembic/: __init__.py  env.py
backend/app/: config.py  database.py  main.py
backend/app/middleware/: auth.py  error_handler.py
backend/app/models/: __init__.py  audit.py  forecast.py  notification.py  simulation.py  site.py  traffic.py  user.py
backend/app/routers/: auth.py  dashboard.py  forecasts.py  health.py  notifications.py  settings.py  simulations.py  sites.py  traffic.py  upload.py  users.py
backend/app/schemas/: __init__.py  auth.py  dashboard.py  error.py  forecast.py  health.py  notification.py  settings.py  simulation.py  site.py  traffic.py  upload.py  user.py
backend/app/services/: audit.py  auth.py  export.py  forecasting.py  notification.py  simulation.py  site_analysis.py  traffic.py
backend/app/stubs/: economic_api.py  gis_api.py  land_use_api.py  population_api.py  traffic_api.py
backend/app/utils/: cache.py  jwt.py  security.py
docs/: government-api-integration.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
(+62 files in other folders)
